<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <CheckBox
        android:id="@+id/adapter_common_pager6_checkbox_select"
        android:layout_height="30dp"
        android:layout_width="wrap_content"
        android:layout_marginStart="@dimen/layout_xl_margin"
        android:layout_marginEnd="@dimen/layout_xl_margin"
        android:text="@string/demo_tv_select"
        android:textStyle="bold|italic"
        android:textColor="@color/colorGray800"/>
    <LinearLayout
        android:id="@+id/adapter_common_pager6_ll1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/adapter_common_pager6_select_memory"
            android:layout_height="40dp"
            android:layout_width="0dp"
            android:layout_weight="8"
            android:background="@drawable/spinner"
            android:layout_marginStart="@dimen/layout_h_margin"
            android:layout_marginEnd="@dimen/layout_xl_margin"/>
        <com.favepc.reader.rfidreaderutility.adapter.EditTextAdapter
            android:id="@+id/adapter_common_pager6_select_address"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="6"
            android:maxLength="4"
            android:maxLines="1"
            android:hint="@string/common_adapter_hint_address"
            android:layout_marginTop="@dimen/layout_xl_margin"
            android:layout_marginStart="@dimen/layout_xxl_margin"
            android:layout_marginEnd="@dimen/layout_xxl_margin"/>
        <com.favepc.reader.rfidreaderutility.adapter.EditTextAdapter
            android:id="@+id/adapter_common_pager6_select_length"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:maxLength="4"
            android:maxLines="1"
            android:hint="@string/common_adapter_hint_length"
            android:layout_marginTop="@dimen/layout_xl_margin"
            android:layout_marginStart="@dimen/layout_xxl_margin"
            android:layout_marginEnd="@dimen/layout_xxl_margin"/>
    </LinearLayout>
    <com.favepc.reader.rfidreaderutility.adapter.EditTextAdapter
        android:id="@+id/adapter_common_pager6_select_data"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/common_adapter_hint_data"
        android:layout_marginStart="@dimen/layout_h_margin"
        android:layout_marginEnd="@dimen/layout_xxl_margin"/>
    <CheckBox
        android:id="@+id/adapter_common_pager6_checkbox_access"
        android:layout_height="30dp"
        android:layout_width="wrap_content"
        android:layout_marginStart="@dimen/layout_xl_margin"
        android:text="@string/demo_tv_access"
        android:textStyle="bold|italic"
        android:textColor="@color/colorGray800"/>
    <com.favepc.reader.rfidreaderutility.adapter.EditTextAdapter
        android:id="@+id/adapter_common_pager6_access_password"
        android:layout_height="wrap_content"
        android:layout_width="200dp"
        android:maxLength="8"
        android:hint="@string/common_adapter_hint_access_password"
        android:layout_marginStart="@dimen/layout_h_margin"
        android:layout_marginEnd="@dimen/layout_xl_margin"
        android:layout_marginBottom="@dimen/layout_h_margin"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_h_margin"
        android:text="@string/demo_tv_kill"
        android:textStyle="bold|italic"
        android:textColor="@color/colorGray800"/>
    <com.favepc.reader.rfidreaderutility.adapter.EditTextAdapter
        android:id="@+id/adapter_common_pager6_kill_password"
        android:layout_height="wrap_content"
        android:layout_width="200dp"
        android:maxLength="8"
        android:hint="@string/common_adapter_hint_kill_password"
        android:layout_marginStart="@dimen/layout_h_margin"
        android:layout_marginEnd="@dimen/layout_xl_margin"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:id="@+id/adapter_common_pager6_checkbox_process"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_h_margin"
            android:button="@drawable/checkbox_select"
            android:checked="true"/>
        <Button
            android:id="@+id/adapter_common_pager6_kill"
            android:text="@string/common_adapter_pager6_kill"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>


</LinearLayout>