<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/content_fragment_wifi">
    <CheckBox
        android:id="@+id/net_title_search"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_marginTop="@dimen/layout_xl_margin"
        android:text="@string/net_title_search"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        android:textColor="@color/colorGray800"
        android:background="@drawable/gradient_color"/>
    <LinearLayout
        android:id="@+id/ll_search_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/net_title_search"
        android:background="@drawable/gradientx_color_below">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:text="Device Name"
            android:textStyle="italic|bold"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="Destination"
            android:textStyle="italic|bold"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="Local"
            android:textStyle="italic|bold"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_search_title"
        android:orientation="horizontal"
        android:background="@drawable/gradientx_color_below"
        android:focusable="true"
        android:focusableInTouchMode="true">
        <EditText
            android:id="@+id/net_title_search_device"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:hint="@string/net_hint_device_name"
            android:text="iComm=6" />
        <EditText
            android:id="@+id/net_title_tx_port"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:hint="@string/net_hint_tx_port"
            android:text="8209"
            android:inputType="numberDecimal"/>
        <EditText
            android:id="@+id/net_title_rx_port"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:hint="@string/net_hint_rx_port"
            android:text="8302"
            android:inputType="numberDecimal"/>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/rl1"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:background="@drawable/gradient_color_below"
        android:layout_below="@id/ll_search">
        <ListView
            android:id="@+id/net_lvDevice"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fastScrollEnabled="true"
            android:fastScrollAlwaysVisible="false"
            android:layout_below="@+id/ble_tvMsgStatus"
            android:layout_above="@+id/ble_tvMsg"/>
        <Button
            android:id="@+id/net_device_search"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/net_action_search"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"/>
        <ProgressBar
            android:id="@+id/net_device_progressBar"
            android:layout_centerInParent="true"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:indeterminate="true"
            android:indeterminateDrawable="@drawable/progressbar_48_holo"/>
    </RelativeLayout>
    <CheckBox
        android:id="@+id/net_title_assign"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_marginTop="@dimen/layout_l_margin"
        android:layout_below="@id/rl1"
        android:text="@string/net_title_assign"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        android:textColor="@color/colorGray800"
        android:background="@drawable/gradient_color"/>
    <LinearLayout
        android:id="@+id/ll1"
        android:layout_below="@id/net_title_assign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/net_address"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="7"
            android:maxLength="15"
            android:maxLines="1"
            android:hint="@string/net_hint_address"
            android:layout_marginStart="@dimen/layout_xl_margin"
            android:layout_marginEnd="@dimen/layout_xl_margin" />
        <EditText
            android:id="@+id/net_port"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:maxLength="4"
            android:maxLines="1"
            android:hint="@string/net_hint_port"
            android:layout_marginStart="@dimen/layout_xl_margin"
            android:layout_marginEnd="@dimen/layout_xl_margin" />
        <Button
            android:id="@+id/net_device_connect"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/net_action_connect"
            android:layout_marginEnd="@dimen/layout_xl_margin"/>
    </LinearLayout>
    <Button
        android:id="@+id/net_device_disconnect"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll1"
        android:text="@string/net_action_disconnect"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="@dimen/layout_xl_margin"/>
    <android.inputmethodservice.KeyboardView
        android:id="@+id/net_tcp_keyboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:keyBackground="@color/colorGrey"
        android:keyPreviewLayout="@layout/key_preview"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/net_tvMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/layout_xl_margin"
        android:textStyle="italic" />


</RelativeLayout>