<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000">

    <RelativeLayout
        android:layout_centerInParent="true"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginRight="@dimen/layout_xxh_margin"
        android:layout_marginLeft="@dimen/layout_xxh_margin"
        android:padding="@dimen/layout_l_margin"
        android:background="@color/colorSnow1">
        <TextView
            android:id="@+id/activity_wifi_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_xl_margin"
            android:layout_marginStart="@dimen/layout_xl_margin"
            android:textSize="@dimen/layout_xxh_margin"
            android:text="@string/net_action_connect_device"/>
        <LinearLayout
            android:id="@+id/activity_wifi_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_wifi_tv"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="right"
                android:textSize="16dp"
                android:textStyle="italic"
                android:text="@string/net_hint_address"/>
            <EditText
                android:id="@+id/net_dialog_search_device_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/activity_wifi_ll2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_wifi_ll"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="right"
                android:textSize="16dp"
                android:textStyle="italic"
                android:text="@string/net_hint_port"/>
            <EditText
                android:id="@+id/net_dialog_search_device_port"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_wifi_ll2">
            <View
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1">
            </View>
            <Button
                android:id="@+id/net_dialog_search_device_btncancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/net_action_disconnect"/>
            <Button
                android:id="@+id/net_dialog_search_device_btnconnect"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/net_action_connect"/>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout >